# esh

./: .git-pre-commit-template  .gitattributes  .gitignore  .rustfmt.toml  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  DEVELOPING.md  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  msrv.yml
examples/: greet.rs
src/: lib.rs  main.rs  parse.rs  prelude.rs  shell.rs  util.rs
tests/: cli.rs
