[package]
name = "esh"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Embeddable SHell - a Rust library for building interactive, command-driven CLI applications."
repository = "https://github.com/lambdanature/esh"

[lib]
name = "esh"
path = "src/lib.rs"

[[bin]]
name = "esh"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.58", features = ["derive", "string"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vfs-kit = "0.1.13"
