[package]
name = "esh"
version = "0.1.1-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Embeddable SHell - a Rust library for building interactive, command-driven CLI applications."
repository = "https://github.com/lambdanature/esh"
keywords = ["shell", "cli", "vfs"]

[lib]
name = "esh"
path = "src/lib.rs"

[[bin]]
name = "esh"
path = "src/main.rs"


[features]
tracing-log = ["dep:tracing-log"]

[dependencies]
clap = { version = "4.5.58", features = ["derive", "string"] }
os_str_bytes = { version = "7.1.1", default-features = false }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = { version = "0.2.0", optional = true }
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vfs-kit = "0.1.13"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
