[package]
name = "esh"
version = "0.1.2-dev"
edition = "2021"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
description = "Embeddable SHell - a Rust library for building interactive, command-driven CLI applications."
repository = "https://github.com/lambdanature/esh"
keywords = ["shell", "cli", "vfs"]

[lib]
name = "esh"
path = "src/lib.rs"

[[bin]]
name = "esh"
path = "src/main.rs"

[features]
tracing-log = ["dep:tracing-log"]

[dependencies]
clap = { version = "4.5.58", features = ["derive", "string"] }
os_str_bytes = { version = "7.1.1", default-features = false }
test-log = "0.2.19"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = { version = "0.2.0", optional = true }
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vfs-kit = "0.2.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

enum_glob_use = "deny"
todo = "deny"
mod_module_files = "deny"
# missing_docs_in_private_items = "deny"
rest_pat_in_fully_bound_structs = "deny"
cast_possible_truncation = "deny"
indexing_slicing = "deny"

# Formatting and style nitpicks
string_add = "deny"
string_add_assign = "deny"
multiple_crate_versions = "deny"
